<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dialog_wrapper"
        >
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stuff_price_in_dollar"
                android:text="@string/stuff_price_in_dollar"
                android:textSize="15sp"
                android:padding="5dp"
                />

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stuff_price_in_rial"
                android:text="@string/stuff_price_in_rial"
                android:textSize="15sp"
                android:padding="5dp"
                />

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/insurance"
                android:text="@string/insurance"
                android:textSize="15sp"
                android:padding="5dp"
                />
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/customs"
                android:text="@string/customs"
                android:textSize="15sp"
                android:padding="5dp"
                />
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/entrance"
                android:text="@string/entrance"
                android:textSize="15sp"
                android:padding="5dp"
                />
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/helalAhmar"
                android:text="@string/helal_ahmar"
                android:textSize="15sp"
                android:padding="5dp"
                />
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tax_1"
                android:text="@string/tax1"
                android:textSize="15sp"
                android:padding="5dp"
                />
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tax_2"
                android:text="@string/tax2"
                android:textSize="15sp"
                android:padding="5dp"
                />
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/total_tax"
                android:text="@string/total_tax"
                android:textSize="15sp"
                android:padding="5dp"
                />
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/import_duties"
                android:text="@string/import_duties"
                android:textSize="15sp"
                android:padding="5dp"
                />
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/custom_pay"
                android:text="@string/custom_pay"
                android:textSize="15sp"
                android:padding="5dp"
                />
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ff18a1c6"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/total_price"
                android:text="@string/total_price"
                android:textSize="15sp"
                android:padding="5dp"
                />
         <Button android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="#C33357"
                 android:id="@+id/close_btn"
                 android:text="@string/close"
                 android:gravity="center_vertical|center_horizontal"
                 />

    </LinearLayout>
</ScrollView>